# target-sqlite

./: .gitignore  .gitlab-ci.yml  README.md  config.json  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_workflow.yml  test.yml
bak/: sqlite_loader.py  target_sqlite.py
bak/tests-bak/: bak-test_sqlite_loader.py  bak-test_target_sqlite.py
bak/utils/: error.py
singer_sqlite/: __init__.py  config.py  connector.py  sink.py  stream.py  tap.py  target.py
target_sqlite/: __init__.py  sqlite_loader.py  target_sqlite.py
target_sqlite/bak/: __init__.py  target_sqlite.py
target_sqlite/utils/: singer_target_utils.py
tests/: conftest.py  test_sqlite.py  test_sqlite_loader.py  test_tap.py  test_target_sqlite.py
tests/bak/: conftest.py
