[tool.poetry]
name = "singer-sqlite"
version = "2.0.0"
description = "A Singer tap and target for SQLite, built with the Meltano SDK."
authors = ["Meltano"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
# inflection = '>=0.3.1'
# singer-python = '>=5.0.12'
# sqlalchemy = '==1.3.0'

# singer-sdk = {path = "../sdk", develop = true}
singer-sdk = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
freezegun = "^1.1.0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"
black = "^21.9b0"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declarations
target-sqlite = 'singer_sqlite:SQLiteTarget.cli'
tap-sqlite = 'singer_sqlite:SQLiteTap.cli'
